--- a/modulo-css-avançado-1/03-seletores-avançado/style.css
+++ b/modulo-css-avançado-1/03-seletores-avançado/style.css
@@ -20,3 +20,25 @@ h3{
 .titulo.vermelho{
     color: red;
 }
+p, span{
+    font-size: 12px;
+}
+
+.sobre .texto{
+    background-color: burlywood;
+}
+
+section > p{
+    background-color: coral;
+}
+
+div + p{
+    color: yellow;
+}
+
+a[target= _blank]{
+    color: red;
+}
+a[href="google.com"]{
+    background-color: aquamarine;
+}
