--- a/modulo-css-avançado-2/01-flex-container-1/style.css
+++ b/modulo-css-avançado-2/01-flex-container-1/style.css
@@ -1,13 +1,20 @@
 .container{
     display: flex;
-    flex-direction: row;
-
+}
+.direction{
+    flex-direction: column-reverse;
+}
+.wrap{
+    flex-wrap: nowrap;
 }
 
+.flow{
+    flex-flow: row-reverse wrap;
+}
 .container div{
     background-color: aqua;
     color: white;
-    width: 50px;
-    height: 50px;
+    width: 100px;
+    height: 100px;
     margin: 10px;
 }
