--- a/Exercícios/ex04/css/style.css
+++ b/Exercícios/ex04/css/style.css
@@ -14,21 +14,24 @@
     justify-content: space-between;
     width: 100%;
     height: 426px;
-    padding: 60px;
+    padding: 60px 0;
     background-color: aquamarine;
+}
+.logo strong{
+    display: flex;
+    align-items: center;
+    padding-left: 45px;
 }
 .link-para-outras-paginas{
     display: flex;
-    width: 350px;
-    padding-left: 20px;
     align-items: center;
+    padding-right: 45px;
 
 }
 .link-para-outras-paginas li{
     display: flex;
+    flex: 0 1 auto;
     margin-left: 30px;
-    justify-content: space-around;
-  
 }
 
 .sobre{
