--- a/Exercícios/ex04/css/style.css
+++ b/Exercícios/ex04/css/style.css
@@ -1,80 +1,68 @@
 
-@import url('https://fonts.googleapis.com/css2?family=Public+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
-
-*{
-    margin: 0;
-    padding: 0;
-    text-decoration: none;
-    font-family: 'Public Sans', sans-serif;
-    color: #000;
-}
-
 .menu{
     display: flex;
     justify-content: space-between;
     width: 100%;
     height: 426px;
-    padding: 60px 0;
+    padding: 45px 0;
     /* background-color: aquamarine; */
 }
 .logo strong{
     display: flex;
     align-items: center;
     padding-left: 45px;
+    font-size: 20px;
 }
 .link-para-outras-paginas{
+    list-style-type: none;
     display: flex;
     align-items: center;
     padding-right: 45px;
 
 }
-.link-para-outras-paginas li{
+.link-para-outras-paginas li a{
     display: flex;
     flex: 0 0 auto;
     margin-left: 30px;
+    transition: 0.3s;
+    padding: 10 5;
 }
-
-.sobre{
+.link-para-outras-paginas li a:hover{
     background-color:#5BC241;
     color: #fff;
-    padding: 11px 7px;
+    padding: 10px 5px;
 }
-.cadastre-se{
+.cadastre-se:hover{
     background: #5BC241;
     color: #fff;
-    padding: 10px 21px;
+    padding: 10px 20px;
     border-radius: 10px;
+    font-weight: 300;
 }
 
-@media(max-width:375px){
+@media(max-width:760px){
     *{
         margin: 0;
         padding: 0;
-        font-size: 30px;
+        font-size: 40px;
     }
     .menu{
-        display: block;
-        text-align: center;
-        width: 100%;
-        height: 800px;
-        padding: 45px 0 55px 0;
+        flex-direction: column;
+        align-items: center;
     }
     .logo strong{
-        display: block;
-        padding: 0;
+        padding-left: 0;
     }
     .link-para-outras-paginas{
-        display: block;
-        padding: 0;
+        flex-direction: column;
+        align-items: center;
+        margin-top: 50px;
     }
     .link-para-outras-paginas li{
-        display: block;
-        justify-content: center;
-        margin: 25px 0px;
-        
+        margin: 25px 0;
     }
     .cadastre-se{
-    font-size: 18px;
-    font-weight: 300;
+    font-size:20px;
+    padding: 15px 23px; 
     }
 }
