--- a/modulo-css-avançado/12-grid-layout/style.css
+++ b/modulo-css-avançado/12-grid-layout/style.css
@@ -7,6 +7,10 @@
 
 .container{
     display: grid;
-    grid-template-columns: auto auto;
-    grid-template-rows: 150px  50px auto auto;
+    /* grid-template-columns: auto auto;
+    grid-template-rows: repeat(4, 150px); */
+    grid-template: repeat(2, 50px)/ repeat(2, 200px);
+    grid-gap: 10px 15px;
+    /* grid-column-gap: 10px;
+    grid-row-gap: 5px; */
 }
