--- a/Exercícios/ex04/css/style.css
+++ b/Exercícios/ex04/css/style.css
@@ -7,11 +7,14 @@
     padding: 45px 0;
     /* background-color: aquamarine; */
 }
-.logo strong{
+.logo .texto-logo{
     display: flex;
     align-items: center;
     padding-left: 45px;
     font-size: 20px;
+}
+.logo .texto-logo img{
+    margin-right: 5px;
 }
 .link-para-outras-paginas{
     list-style-type: none;
@@ -50,7 +53,7 @@
         flex-direction: column;
         align-items: center;
     }
-    .logo strong{
+    .logo .texto-logo{
         padding-left: 0;
         font-size: 47px;
         font-weight: 800;
