--- a/leading-page-com-grid/src/css/style.css
+++ b/leading-page-com-grid/src/css/style.css
@@ -37,10 +37,44 @@ body{
     color: coral;
 }
 
-    /* hero */
+/* hero */
     .hero{
     grid-area: hero;
-    background-color: brown;
+    height: 89vh;
+    background: url(../images/lemons.jpg) center center no-repeat;
+    background-size: cover;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        position: relative;
+}
+
+.hero h2{
+    font-size: 700;
+    text-transform: uppercase;
+    font-size: 4rem;
+}
+
+.hero:after{
+    content: url(../images/seta_preta.png);
+    height: 35px;
+    bottom: 40px;
+    position: absolute;
+    animation: downarrow 0.6s infinite alternate ease-in-out;
+}
+
+@-webkit-keyframes downarrow{
+    0% {-webkit-transform: translatey(0); opacity: 0;}
+    100%{ -webkit-transform: translatey(0.4em); opacity: 0.9;}
+}
+
+@media (max-width:425px){
+    .hero{
+        height: 60vh;
+    }
+    .hero h2{
+        font-size: 2.5rem;
+    }
 }
 
 /* about */
