--- a/leading-page-com-grid/src/css/menu.css
+++ b/leading-page-com-grid/src/css/menu.css
@@ -21,8 +21,9 @@
 
 .header .header-container nav label{
     display: flex;
-flex-direction: column;
+    flex-direction: column;
 }
+
 .header .header-container .hamburguer{
     background-color: black;
     position: relative;
@@ -33,8 +34,8 @@ flex-direction: column;
     left: 15px;
     transition: 0.9s ease-in-out;
 }
-.header .header-container .hamburguer::before,
-.header .header-container .hamburguer::after{
+.header .header-container .hamburguer:before,
+.header .header-container .hamburguer:after{
     background-color: black;
     content: "";
     display: block;
@@ -43,10 +44,10 @@ flex-direction: column;
     position: absolute;
     transition: 0.8s ease-in-out;
 }
-.header .header-container .hamburguer::before{
+.header .header-container .hamburguer:before{
     top: -10px;
 }
-.header .header-container .hamburguer::after{
+.header .header-container .hamburguer:after{
     bottom: -10px;
 }
 .header .header-container input{
@@ -57,11 +58,11 @@ flex-direction: column;
     transform: rotate(45deg);
 }
 
-.header .header-container input:checked ~label .hamburguer::before{
+.header .header-container input:checked ~label .hamburguer:before{
     transform: rotate(90deg);
     top: 0;
 }
-.header .header-container input:checked ~label .hamburguer::after{
+.header .header-container input:checked ~label .hamburguer:after{
     transform: rotate(90deg);
     bottom: 0;
 }
@@ -92,6 +93,8 @@ flex-direction: column;
     }
 
     .header .header-container nav ul a{
-
+        text-align: center;
+        padding: 20px;
+        display: block;
     }
 }
