--- a/leading-page-com-grid/src/css/style.css
+++ b/leading-page-com-grid/src/css/style.css
@@ -184,7 +184,7 @@ body{
 .projects a:hover img{
     opacity: 0.8;
 }
-@media(max-width:760px){
+@media(max-width:768px){
     .projects{
     grid-template-columns: 1fr 1fr;
     grid-template-rows: 1fr 1fr;
@@ -199,5 +199,45 @@ body{
 /* footer */
 .footer{
     grid-area: footer;
-    background-color: orange;
+    display: flex;
+    background: lightgreen;
+    flex-direction: column;
+    text-align: center;
+    padding: 100px 0;
+}
+.footer h4{font-weight: 400;
+    font-size: 2rem;
+    margin-bottom: 20px;
+}
+.footer nav{
+    margin: 50px 0;
+}
+
+.footer nav ul{
+    display: flex;
+    justify-content: center;
+    max-width: 320px;
+    margin: 0 auto;
+}
+.footer nav ul a{
+    font-weight: 500;
+    font-size: 2rem;
+    margin: 20px;
+    transition: 0.3s;
+}
+
+.footer nav ul a:hover{
+    font-weight: 700;
+    color: #fff;
+}
+
+.footer .social i{
+    font-size: 2rem;
+    transition: 0.2s;
+}
+.footer .social a{
+    margin: 20px;
+}
+.footer .social a:hover{
+    color: #fff;
 }
